Replaced Binding of views with Butterknife

--- a/app/src/main/res/layout/activity_lost_screen.xml
+++ b/app/src/main/res/layout/activity_lost_screen.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text=""
-        android:id="@+id/versionTextView"
+        android:id="@+id/versionTextLost"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
