--- a/app/src/main/res/drawable-xxhdpi/redroundedbutton.xml
+++ b/app/src/main/res/drawable-xxhdpi/redroundedbutton.xml
@@ -2,10 +2,10 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-android:shape="rectangle">
-<solid android:color="#ffff0000" />
-<corners android:bottomRightRadius="40dip"
-         android:bottomLeftRadius="40dip"
-         android:topRightRadius="40dip"
-         android:topLeftRadius="40dip"/>
+    <solid android:color="#ffff0000"/>
+    <corners
+        android:bottomLeftRadius="40dip"
+        android:bottomRightRadius="40dip"
+        android:topLeftRadius="40dip"
+        android:topRightRadius="40dip"/>
 </shape>
