--- a/app/src/main/res/drawable-xxhdpi/greenroundedbutton.xml
+++ b/app/src/main/res/drawable-xxhdpi/greenroundedbutton.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
     <solid android:color="#ff009900" />
-    <corners android:bottomRightRadius="40dip"
-             android:bottomLeftRadius="40dip"
-             android:topRightRadius="40dip"
-             android:topLeftRadius="40dip"/>
+    <corners android:bottomRightRadius="40dp"
+             android:bottomLeftRadius="40dp"
+             android:topRightRadius="40dp"
+             android:topLeftRadius="40dp"/>
 </shape>
