--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,50 +6,18 @@
     tools:context="joseeduardo.com.projectmemorygame.ui.Game">
 
 
-    <Button
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:id="@+id/yellowButton"
-        android:background="@drawable/yellowroundedbutton"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="10dp"/>
-
-    <Button
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:id="@+id/greenButton"
-        android:background="@drawable/greenroundedbutton"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"/>
-
-    <Button
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:id="@+id/blueButton"
-        android:background="@drawable/blueroundedbutton"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"/>
-
-    <Button
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:id="@+id/redButton"
-        android:background="@drawable/redroundedbutton"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
-
     <TextView
         android:layout_width="90dp"
         android:layout_height="90dp"
         android:gravity="center"
+        android:padding="4dp"
+        tools:background="#ff009900"
+        tools:text="Color"
+        android:textColor="#000"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/askerTextView"
         android:layout_centerInParent="true"
-        android:textSize="19sp"/>
+        android:textSize="22sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -85,6 +53,67 @@
         android:layout_alignParentStart="true"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timeTextTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="10dp"
+        android:textSize="15sp"
+        android:textColor="#99FFFFFF"
+        android:text="@string/time"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/timeTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="20dp"
+        android:textSize="40sp"
+        android:textColor="#99FFFFFF"
+        android:text="9"/>
+
+
+    <Button
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:id="@+id/yellowButton"
+        android:background="@drawable/yellowroundedbutton"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"/>
+
+    <Button
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:id="@+id/greenButton"
+        android:background="@drawable/greenroundedbutton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"/>
+
+    <Button
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:id="@+id/blueButton"
+        android:background="@drawable/blueroundedbutton"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"/>
+
+    <Button
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:id="@+id/redButton"
+        android:background="@drawable/redroundedbutton"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"/>
 
     <Button
         android:layout_width="90dp"
@@ -124,28 +153,6 @@
         android:layout_marginBottom="80dp"
         android:layout_marginRight="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timeTextTextView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="10dp"
-        android:textSize="15sp"
-        android:textColor="#99FFFFFF"
-        android:text="@string/time"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/timeTextView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="20dp"
-        android:textSize="40sp"
-        android:textColor="#99FFFFFF"
-        android:text="9"/>
 
 </RelativeLayout>
