--- a/app/src/main/res/layout/activity_lost_screen.xml
+++ b/app/src/main/res/layout/activity_lost_screen.xml
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/lastScoreTextView"
                 android:textSize="50sp"
-                tools:text="100"
+                android:text="0"
                 android:gravity="center_horizontal"/>
         </LinearLayout>
 
@@ -90,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/highScoreTextView"
                 android:textSize="50sp"
-                tools:text="100"
+                android:text="0"
                 android:gravity="center_horizontal"/>
         </LinearLayout>
     </LinearLayout>
