--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="@drawable/background_main_screen"
-    tools:context=".MainScreen">
+    tools:context=".ui.MainScreen">
 
     <TextView
         android:layout_width="wrap_content"
@@ -27,17 +27,15 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/play_black_button"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:id="@+id/how_to_play"
-        android:text="How to Play"
+        android:src="@drawable/ic_help"
         android:textAllCaps="false"
-        android:layout_toRightOf="@id/startGame"
-        android:layout_toEndOf="@id/startGame"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginStart="20dp"/>
+        android:layout_below="@id/startGame"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"/>
 
     <ImageView
         android:layout_width="200dp"
